# quepy

./: .env  .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
applications/dbpedia/: answerer.py  app.py  config.py  dbpedia_bot.py  logging.conf.yaml  requirements.txt  rtmbot.conf  rtmbot.py  run.py  sparql-cli.py
applications/dbpedia/dbpedia/: __init__.py  basic.py  country.py  dsl.py  movies.py  music.py  people.py  settings.py  tvshows.py  writers.py
applications/wikidata/: main.py
applications/wikidata/wikidata/: country.py  people.py  settings.py
examples/dbpedia/: main.py  sparql-cli.py
examples/dbpedia/dbpedia/: basic.py  country.py  dsl.py  movies.py  music.py  people.py
examples/wikidata/wikidata/: basic.py  dsl.py
quepy/: dsl.py  expression.py  generation.py  mecab.py  parsing.py  quepyapp.py  settings.py  sparql_generation.py  tagger.py
scripts/: quepy
scripts/test/: main.py
scripts/test/test/: __init__.py  basic.py  dsl.py  settings.py
