[metadata]
name = quepy-ko
version = 0.3
summary = Quepy fork fo Korean language and SPARQL constraint support
description-file =
    README.rst
author = Baeg-il Kim
author-email = cedar101@gmail.com
home-page = https://github.com/cedar101/quepy-ko
keywords =
    regular expressions
    regexp
    re
    NLP
    natural language processing
    natural language interface to database
    sparql
    SPARQL constraint
    database
    interface
    quepy
    quepy-ko
    Korean
    Korean language
classifier =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: Korean
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Database
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing
    Topic :: Utilities
[files]
packages =
    quepy
scripts =
    scripts/quepy
[pbr]
warnerrors = True
[wheel]
universal = 1
[entry_points]
console_scripts =
    quepy = scripts.quepy:main
